dev/Styles/Compose.less
.b-compose {

	&.modal {
		width: 98%;
		max-width: 1000px;
		min-height: calc(100% - 52px);
	}

	.modal-body {
		padding: 0;
	}

	.textAreaParent, .attachmentAreaParent {
		box-sizing: border-box;
		min-height: 200px;
		position: relative;
	}

	.attachmentAreaParent {
		padding: 10px 10px 6px 10px;
		background: #ddd;
		border-top: 1px solid #ccc;

		overflow-y: auto;
	}

	.attachmentAreaParent {

		.no-attachments-desc {
			padding: 50px 10px;
			text-align: center;
			font-size: 24px;
			color: #666;
			text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
		}

		.attachmentList {
			margin: 0;
			padding: 10px;
		}
	}

	.b-header-toolbar {

		color: #fff;
		background-color: rgba(0,0,0,0.8);

		.close, .minimize-custom {
			opacity: 1;
			color: #fff;
			border-color: #eee;

			font-size: 24px;
			line-height: 24px;
		}

		.btn.disabled {
			&.button-delete {
				visibility: hidden;
			}
		}

		.button-save, .button-delete, .saved-text {
			margin-left: 8px;
		}

		.button-close, .button-skip {
			margin-left: 8px;
		}

		.disabled.button-delete {
			margin-left: 0;
		}
	}

	.b-header {

		padding: 10px;
		background-color: #eee;
		color: #333;

		.e-identity {

			color: #333;
			text-decoration: none;
			font-weight: bold;

			&:hover {
				color: #333;
				text-decoration: none;
			}

			&.multiply {
				cursor: pointer;
				border-bottom: 1px dashed #555;
			}
		}

		.e-row {
			line-height: 30px;
		}

		.e-label {
			text-align: right;
			padding: 6px 10px;
		}

		.e-value {

			padding: 2px 0;

			textarea, input[type="text"] {
				width: 100%;
			}
			textarea {
				height: 40px;
			}
		}

		.error-desc {
			color: red;
		}

		.error-to {
			color: red;
			font-weight: bold;
		}
	}

	.b-attachment-button {
		display: inline-block;
	}

	.b-attachment-place {

		position: absolute;
		left: 5px;
		right: 5px;
		top: 5px;
		bottom: 5px;

		border: 2px #777 dashed;
		z-index: 300;

		line-height: 119px;
		text-align: center;
		background-color: #efefef;
		font-size: 24px;

		border-radius: 10px;

		&.dragAndDropOver {
			background-color: #fff;
		}
	}
}

.minimize-custom {
	border: 0 solid #333;
	border-bottom-width: 3px;
	display: inline-block;
	float: right;
	height: 20px;
	width: 16px;
	font-size: 20px;
	font-weight: bold;
	line-height: 20px;
	margin-right: 15px;
	cursor: pointer;
}

@media screen and (max-width: 700px) {
	.b-compose .b-header .e-label {
		padding-left: 0;
	}
}

